--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "echarts": "^3.8.5",
     "jquery": "^3.2.1",
+    "mongodb": "^2.2.33",
+    "mongoskin": "^2.1.0",
     "vue": "^2.5.2",
     "vue-progress": "^0.2.1",
     "vue-router": "^3.0.1"
